src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EMPTY_ARRAY
    MUTABLE
    STRING_TYPE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> assignment
Rule 5     statement -> print_statement
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> return_statement
Rule 9     statement -> move_statement
Rule 10    statement -> function_decl
Rule 11    statement -> array_decl
Rule 12    statement -> pointer_decl
Rule 13    statement -> address_of
Rule 14    statement -> function_call_stmt
Rule 15    assignment -> IDENTIFIER ASSIGN expr SEMI
Rule 16    assignment -> IDENTIFIER LSQUARE expr RSQUARE ASSIGN expr SEMI
Rule 17    assignment -> IDENTIFIER ASSIGN function_call SEMI
Rule 18    print_statement -> PRINT LPAREN expr RPAREN SEMI
Rule 19    if_statement -> IF LPAREN expr RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 20    if_statement -> IF LPAREN expr RPAREN LBRACE statement_list RBRACE
Rule 21    while_statement -> WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
Rule 22    while_statement -> WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE INSTEAD LBRACE statement_list RBRACE
Rule 23    return_statement -> RETURN expr SEMI
Rule 24    move_statement -> direction SEMI
Rule 25    direction -> TOP
Rule 26    direction -> BOTTOM
Rule 27    direction -> LEFT
Rule 28    direction -> RIGHT
Rule 29    direction -> TIMESHIFT
Rule 30    function_decl -> FUNCTION IDENTIFIER LPAREN params RPAREN LBRACE statement_list RBRACE
Rule 31    function_decl -> FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE
Rule 32    function_args -> expr
Rule 33    function_args -> function_call
Rule 34    function_args_list -> function_args
Rule 35    function_args_list -> function_args COMMA function_args_list
Rule 36    function_call -> IDENTIFIER LPAREN function_args_list RPAREN
Rule 37    function_call -> IDENTIFIER LPAREN RPAREN
Rule 38    function_call_stmt -> function_call SEMI
Rule 39    params -> IDENTIFIER
Rule 40    params -> IDENTIFIER COMMA params
Rule 41    array_decl -> ARRAY_TYPE INTEGER_TYPE OF IDENTIFIER expr SEMI
Rule 42    array_decl -> ARRAY_TYPE INTEGER_TYPE OF IDENTIFIER SEMI
Rule 43    pointer_decl -> POINTER_TYPE INTEGER_TYPE IDENTIFIER ASSIGN expr SEMI
Rule 44    pointer_decl -> POINTER_TYPE IDENTIFIER SEMI
Rule 45    expr -> expr PLUS expr
Rule 46    expr -> expr MINUS expr
Rule 47    expr -> expr MUL expr
Rule 48    expr -> expr DIV expr
Rule 49    expr -> expr EQ expr
Rule 50    expr -> expr NE expr
Rule 51    expr -> expr LT expr
Rule 52    expr -> expr GT expr
Rule 53    expr -> expr LE expr
Rule 54    expr -> expr GE expr
Rule 55    expr -> LPAREN expr RPAREN
Rule 56    expr -> NUMBER
Rule 57    expr -> MINUS expr
Rule 58    expr -> MUL expr
Rule 59    expr -> QUESTION_MARK IDENTIFIER
Rule 60    address_of -> AMPERSAND IDENTIFIER
Rule 61    expr -> STRING
Rule 62    expr -> IDENTIFIER
Rule 63    expr -> function_call
Rule 64    expr -> address_of

Terminals, with rules where they appear

AMPERSAND            : 60
ARRAY_TYPE           : 41 42
ASSIGN               : 15 16 17 43
BOTTOM               : 26
COMMA                : 35 40
DIV                  : 48
ELSE                 : 19
EMPTY_ARRAY          : 
EQ                   : 49
FUNCTION             : 30 31
GE                   : 54
GT                   : 52
IDENTIFIER           : 15 16 17 30 31 36 37 39 40 41 42 43 44 59 60 62
IF                   : 19 20
INSTEAD              : 22
INTEGER_TYPE         : 41 42 43
LBRACE               : 19 19 20 21 22 22 30 31
LE                   : 53
LEFT                 : 27
LPAREN               : 18 19 20 21 22 30 31 36 37 55
LSQUARE              : 16
LT                   : 51
MINUS                : 46 57
MUL                  : 47 58
MUTABLE              : 
NE                   : 50
NUMBER               : 56
OF                   : 41 42
PLUS                 : 45
POINTER_TYPE         : 43 44
PRINT                : 18
QUESTION_MARK        : 59
RBRACE               : 19 19 20 21 22 22 30 31
RETURN               : 23
RIGHT                : 28
RPAREN               : 18 19 20 21 22 30 31 36 37 55
RSQUARE              : 16
SEMI                 : 15 16 17 18 23 24 38 41 42 43 44
STRING               : 61
STRING_TYPE          : 
TIMESHIFT            : 29
TOP                  : 25
WHILE                : 21 22
error                : 

Nonterminals, with rules where they appear

address_of           : 13 64
array_decl           : 11
assignment           : 4
direction            : 24
expr                 : 15 16 16 18 19 20 21 22 23 32 41 43 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 57 58
function_args        : 34 35
function_args_list   : 35 36
function_call        : 17 33 38 63
function_call_stmt   : 14
function_decl        : 10
if_statement         : 6
move_statement       : 9
params               : 30 40
pointer_decl         : 12
print_statement      : 5
program              : 0
return_statement     : 8
statement            : 2 3
statement_list       : 1 3 19 19 20 21 22 22 30 31
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . assignment
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . return_statement
    (9) statement -> . move_statement
    (10) statement -> . function_decl
    (11) statement -> . array_decl
    (12) statement -> . pointer_decl
    (13) statement -> . address_of
    (14) statement -> . function_call_stmt
    (15) assignment -> . IDENTIFIER ASSIGN expr SEMI
    (16) assignment -> . IDENTIFIER LSQUARE expr RSQUARE ASSIGN expr SEMI
    (17) assignment -> . IDENTIFIER ASSIGN function_call SEMI
    (18) print_statement -> . PRINT LPAREN expr RPAREN SEMI
    (19) if_statement -> . IF LPAREN expr RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (20) if_statement -> . IF LPAREN expr RPAREN LBRACE statement_list RBRACE
    (21) while_statement -> . WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
    (22) while_statement -> . WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE INSTEAD LBRACE statement_list RBRACE
    (23) return_statement -> . RETURN expr SEMI
    (24) move_statement -> . direction SEMI
    (30) function_decl -> . FUNCTION IDENTIFIER LPAREN params RPAREN LBRACE statement_list RBRACE
    (31) function_decl -> . FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE
    (41) array_decl -> . ARRAY_TYPE INTEGER_TYPE OF IDENTIFIER expr SEMI
    (42) array_decl -> . ARRAY_TYPE INTEGER_TYPE OF IDENTIFIER SEMI
    (43) pointer_decl -> . POINTER_TYPE INTEGER_TYPE IDENTIFIER ASSIGN expr SEMI
    (44) pointer_decl -> . POINTER_TYPE IDENTIFIER SEMI
    (60) address_of -> . AMPERSAND IDENTIFIER
    (38) function_call_stmt -> . function_call SEMI
    (25) direction -> . TOP
    (26) direction -> . BOTTOM
    (27) direction -> . LEFT
    (28) direction -> . RIGHT
    (29) direction -> . TIMESHIFT
    (36) function_call -> . IDENTIFIER LPAREN function_args_list RPAREN
    (37) function_call -> . IDENTIFIER LPAREN RPAREN

    IDENTIFIER      shift and go to state 15
    PRINT           shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    RETURN          shift and go to state 20
    FUNCTION        shift and go to state 22
    ARRAY_TYPE      shift and go to state 23
    POINTER_TYPE    shift and go to state 24
    AMPERSAND       shift and go to state 25
    TOP             shift and go to state 26
    BOTTOM          shift and go to state 27
    LEFT            shift and go to state 28
    RIGHT           shift and go to state 29
    TIMESHIFT       shift and go to state 30

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    return_statement               shift and go to state 8
    move_statement                 shift and go to state 9
    function_decl                  shift and go to state 10
    array_decl                     shift and go to state 11
    pointer_decl                   shift and go to state 12
    address_of                     shift and go to state 13
    function_call_stmt             shift and go to state 14
    function_call                  shift and go to state 16
    direction                      shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . assignment
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . return_statement
    (9) statement -> . move_statement
    (10) statement -> . function_decl
    (11) statement -> . array_decl
    (12) statement -> . pointer_decl
    (13) statement -> . address_of
    (14) statement -> . function_call_stmt
    (15) assignment -> . IDENTIFIER ASSIGN expr SEMI
    (16) assignment -> . IDENTIFIER LSQUARE expr RSQUARE ASSIGN expr SEMI
    (17) assignment -> . IDENTIFIER ASSIGN function_call SEMI
    (18) print_statement -> . PRINT LPAREN expr RPAREN SEMI
    (19) if_statement -> . IF LPAREN expr RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (20) if_statement -> . IF LPAREN expr RPAREN LBRACE statement_list RBRACE
    (21) while_statement -> . WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
    (22) while_statement -> . WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE INSTEAD LBRACE statement_list RBRACE
    (23) return_statement -> . RETURN expr SEMI
    (24) move_statement -> . direction SEMI
    (30) function_decl -> . FUNCTION IDENTIFIER LPAREN params RPAREN LBRACE statement_list RBRACE
    (31) function_decl -> . FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE
    (41) array_decl -> . ARRAY_TYPE INTEGER_TYPE OF IDENTIFIER expr SEMI
    (42) array_decl -> . ARRAY_TYPE INTEGER_TYPE OF IDENTIFIER SEMI
    (43) pointer_decl -> . POINTER_TYPE INTEGER_TYPE IDENTIFIER ASSIGN expr SEMI
    (44) pointer_decl -> . POINTER_TYPE IDENTIFIER SEMI
    (60) address_of -> . AMPERSAND IDENTIFIER
    (38) function_call_stmt -> . function_call SEMI
    (25) direction -> . TOP
    (26) direction -> . BOTTOM
    (27) direction -> . LEFT
    (28) direction -> . RIGHT
    (29) direction -> . TIMESHIFT
    (36) function_call -> . IDENTIFIER LPAREN function_args_list RPAREN
    (37) function_call -> . IDENTIFIER LPAREN RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    IDENTIFIER      shift and go to state 15
    PRINT           shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    RETURN          shift and go to state 20
    FUNCTION        shift and go to state 22
    ARRAY_TYPE      shift and go to state 23
    POINTER_TYPE    shift and go to state 24
    AMPERSAND       shift and go to state 25
    TOP             shift and go to state 26
    BOTTOM          shift and go to state 27
    LEFT            shift and go to state 28
    RIGHT           shift and go to state 29
    TIMESHIFT       shift and go to state 30

    statement                      shift and go to state 31
    assignment                     shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    return_statement               shift and go to state 8
    move_statement                 shift and go to state 9
    function_decl                  shift and go to state 10
    array_decl                     shift and go to state 11
    pointer_decl                   shift and go to state 12
    address_of                     shift and go to state 13
    function_call_stmt             shift and go to state 14
    function_call                  shift and go to state 16
    direction                      shift and go to state 21

state 3

    (2) statement_list -> statement .

    IDENTIFIER      reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    FUNCTION        reduce using rule 2 (statement_list -> statement .)
    ARRAY_TYPE      reduce using rule 2 (statement_list -> statement .)
    POINTER_TYPE    reduce using rule 2 (statement_list -> statement .)
    AMPERSAND       reduce using rule 2 (statement_list -> statement .)
    TOP             reduce using rule 2 (statement_list -> statement .)
    BOTTOM          reduce using rule 2 (statement_list -> statement .)
    LEFT            reduce using rule 2 (statement_list -> statement .)
    RIGHT           reduce using rule 2 (statement_list -> statement .)
    TIMESHIFT       reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> assignment .

    IDENTIFIER      reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    FUNCTION        reduce using rule 4 (statement -> assignment .)
    ARRAY_TYPE      reduce using rule 4 (statement -> assignment .)
    POINTER_TYPE    reduce using rule 4 (statement -> assignment .)
    AMPERSAND       reduce using rule 4 (statement -> assignment .)
    TOP             reduce using rule 4 (statement -> assignment .)
    BOTTOM          reduce using rule 4 (statement -> assignment .)
    LEFT            reduce using rule 4 (statement -> assignment .)
    RIGHT           reduce using rule 4 (statement -> assignment .)
    TIMESHIFT       reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> print_statement .

    IDENTIFIER      reduce using rule 5 (statement -> print_statement .)
    PRINT           reduce using rule 5 (statement -> print_statement .)
    IF              reduce using rule 5 (statement -> print_statement .)
    WHILE           reduce using rule 5 (statement -> print_statement .)
    RETURN          reduce using rule 5 (statement -> print_statement .)
    FUNCTION        reduce using rule 5 (statement -> print_statement .)
    ARRAY_TYPE      reduce using rule 5 (statement -> print_statement .)
    POINTER_TYPE    reduce using rule 5 (statement -> print_statement .)
    AMPERSAND       reduce using rule 5 (statement -> print_statement .)
    TOP             reduce using rule 5 (statement -> print_statement .)
    BOTTOM          reduce using rule 5 (statement -> print_statement .)
    LEFT            reduce using rule 5 (statement -> print_statement .)
    RIGHT           reduce using rule 5 (statement -> print_statement .)
    TIMESHIFT       reduce using rule 5 (statement -> print_statement .)
    $end            reduce using rule 5 (statement -> print_statement .)
    RBRACE          reduce using rule 5 (statement -> print_statement .)


state 6

    (6) statement -> if_statement .

    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    PRINT           reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    FUNCTION        reduce using rule 6 (statement -> if_statement .)
    ARRAY_TYPE      reduce using rule 6 (statement -> if_statement .)
    POINTER_TYPE    reduce using rule 6 (statement -> if_statement .)
    AMPERSAND       reduce using rule 6 (statement -> if_statement .)
    TOP             reduce using rule 6 (statement -> if_statement .)
    BOTTOM          reduce using rule 6 (statement -> if_statement .)
    LEFT            reduce using rule 6 (statement -> if_statement .)
    RIGHT           reduce using rule 6 (statement -> if_statement .)
    TIMESHIFT       reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    IDENTIFIER      reduce using rule 7 (statement -> while_statement .)
    PRINT           reduce using rule 7 (statement -> while_statement .)
    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    RETURN          reduce using rule 7 (statement -> while_statement .)
    FUNCTION        reduce using rule 7 (statement -> while_statement .)
    ARRAY_TYPE      reduce using rule 7 (statement -> while_statement .)
    POINTER_TYPE    reduce using rule 7 (statement -> while_statement .)
    AMPERSAND       reduce using rule 7 (statement -> while_statement .)
    TOP             reduce using rule 7 (statement -> while_statement .)
    BOTTOM          reduce using rule 7 (statement -> while_statement .)
    LEFT            reduce using rule 7 (statement -> while_statement .)
    RIGHT           reduce using rule 7 (statement -> while_statement .)
    TIMESHIFT       reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    RBRACE          reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> return_statement .

    IDENTIFIER      reduce using rule 8 (statement -> return_statement .)
    PRINT           reduce using rule 8 (statement -> return_statement .)
    IF              reduce using rule 8 (statement -> return_statement .)
    WHILE           reduce using rule 8 (statement -> return_statement .)
    RETURN          reduce using rule 8 (statement -> return_statement .)
    FUNCTION        reduce using rule 8 (statement -> return_statement .)
    ARRAY_TYPE      reduce using rule 8 (statement -> return_statement .)
    POINTER_TYPE    reduce using rule 8 (statement -> return_statement .)
    AMPERSAND       reduce using rule 8 (statement -> return_statement .)
    TOP             reduce using rule 8 (statement -> return_statement .)
    BOTTOM          reduce using rule 8 (statement -> return_statement .)
    LEFT            reduce using rule 8 (statement -> return_statement .)
    RIGHT           reduce using rule 8 (statement -> return_statement .)
    TIMESHIFT       reduce using rule 8 (statement -> return_statement .)
    $end            reduce using rule 8 (statement -> return_statement .)
    RBRACE          reduce using rule 8 (statement -> return_statement .)


state 9

    (9) statement -> move_statement .

    IDENTIFIER      reduce using rule 9 (statement -> move_statement .)
    PRINT           reduce using rule 9 (statement -> move_statement .)
    IF              reduce using rule 9 (statement -> move_statement .)
    WHILE           reduce using rule 9 (statement -> move_statement .)
    RETURN          reduce using rule 9 (statement -> move_statement .)
    FUNCTION        reduce using rule 9 (statement -> move_statement .)
    ARRAY_TYPE      reduce using rule 9 (statement -> move_statement .)
    POINTER_TYPE    reduce using rule 9 (statement -> move_statement .)
    AMPERSAND       reduce using rule 9 (statement -> move_statement .)
    TOP             reduce using rule 9 (statement -> move_statement .)
    BOTTOM          reduce using rule 9 (statement -> move_statement .)
    LEFT            reduce using rule 9 (statement -> move_statement .)
    RIGHT           reduce using rule 9 (statement -> move_statement .)
    TIMESHIFT       reduce using rule 9 (statement -> move_statement .)
    $end            reduce using rule 9 (statement -> move_statement .)
    RBRACE          reduce using rule 9 (statement -> move_statement .)


state 10

    (10) statement -> function_decl .

    IDENTIFIER      reduce using rule 10 (statement -> function_decl .)
    PRINT           reduce using rule 10 (statement -> function_decl .)
    IF              reduce using rule 10 (statement -> function_decl .)
    WHILE           reduce using rule 10 (statement -> function_decl .)
    RETURN          reduce using rule 10 (statement -> function_decl .)
    FUNCTION        reduce using rule 10 (statement -> function_decl .)
    ARRAY_TYPE      reduce using rule 10 (statement -> function_decl .)
    POINTER_TYPE    reduce using rule 10 (statement -> function_decl .)
    AMPERSAND       reduce using rule 10 (statement -> function_decl .)
    TOP             reduce using rule 10 (statement -> function_decl .)
    BOTTOM          reduce using rule 10 (statement -> function_decl .)
    LEFT            reduce using rule 10 (statement -> function_decl .)
    RIGHT           reduce using rule 10 (statement -> function_decl .)
    TIMESHIFT       reduce using rule 10 (statement -> function_decl .)
    $end            reduce using rule 10 (statement -> function_decl .)
    RBRACE          reduce using rule 10 (statement -> function_decl .)


state 11

    (11) statement -> array_decl .

    IDENTIFIER      reduce using rule 11 (statement -> array_decl .)
    PRINT           reduce using rule 11 (statement -> array_decl .)
    IF              reduce using rule 11 (statement -> array_decl .)
    WHILE           reduce using rule 11 (statement -> array_decl .)
    RETURN          reduce using rule 11 (statement -> array_decl .)
    FUNCTION        reduce using rule 11 (statement -> array_decl .)
    ARRAY_TYPE      reduce using rule 11 (statement -> array_decl .)
    POINTER_TYPE    reduce using rule 11 (statement -> array_decl .)
    AMPERSAND       reduce using rule 11 (statement -> array_decl .)
    TOP             reduce using rule 11 (statement -> array_decl .)
    BOTTOM          reduce using rule 11 (statement -> array_decl .)
    LEFT            reduce using rule 11 (statement -> array_decl .)
    RIGHT           reduce using rule 11 (statement -> array_decl .)
    TIMESHIFT       reduce using rule 11 (statement -> array_decl .)
    $end            reduce using rule 11 (statement -> array_decl .)
    RBRACE          reduce using rule 11 (statement -> array_decl .)


state 12

    (12) statement -> pointer_decl .

    IDENTIFIER      reduce using rule 12 (statement -> pointer_decl .)
    PRINT           reduce using rule 12 (statement -> pointer_decl .)
    IF              reduce using rule 12 (statement -> pointer_decl .)
    WHILE           reduce using rule 12 (statement -> pointer_decl .)
    RETURN          reduce using rule 12 (statement -> pointer_decl .)
    FUNCTION        reduce using rule 12 (statement -> pointer_decl .)
    ARRAY_TYPE      reduce using rule 12 (statement -> pointer_decl .)
    POINTER_TYPE    reduce using rule 12 (statement -> pointer_decl .)
    AMPERSAND       reduce using rule 12 (statement -> pointer_decl .)
    TOP             reduce using rule 12 (statement -> pointer_decl .)
    BOTTOM          reduce using rule 12 (statement -> pointer_decl .)
    LEFT            reduce using rule 12 (statement -> pointer_decl .)
    RIGHT           reduce using rule 12 (statement -> pointer_decl .)
    TIMESHIFT       reduce using rule 12 (statement -> pointer_decl .)
    $end            reduce using rule 12 (statement -> pointer_decl .)
    RBRACE          reduce using rule 12 (statement -> pointer_decl .)


state 13

    (13) statement -> address_of .

    IDENTIFIER      reduce using rule 13 (statement -> address_of .)
    PRINT           reduce using rule 13 (statement -> address_of .)
    IF              reduce using rule 13 (statement -> address_of .)
    WHILE           reduce using rule 13 (statement -> address_of .)
    RETURN          reduce using rule 13 (statement -> address_of .)
    FUNCTION        reduce using rule 13 (statement -> address_of .)
    ARRAY_TYPE      reduce using rule 13 (statement -> address_of .)
    POINTER_TYPE    reduce using rule 13 (statement -> address_of .)
    AMPERSAND       reduce using rule 13 (statement -> address_of .)
    TOP             reduce using rule 13 (statement -> address_of .)
    BOTTOM          reduce using rule 13 (statement -> address_of .)
    LEFT            reduce using rule 13 (statement -> address_of .)
    RIGHT           reduce using rule 13 (statement -> address_of .)
    TIMESHIFT       reduce using rule 13 (statement -> address_of .)
    $end            reduce using rule 13 (statement -> address_of .)
    RBRACE          reduce using rule 13 (statement -> address_of .)


state 14

    (14) statement -> function_call_stmt .

    IDENTIFIER      reduce using rule 14 (statement -> function_call_stmt .)
    PRINT           reduce using rule 14 (statement -> function_call_stmt .)
    IF              reduce using rule 14 (statement -> function_call_stmt .)
    WHILE           reduce using rule 14 (statement -> function_call_stmt .)
    RETURN          reduce using rule 14 (statement -> function_call_stmt .)
    FUNCTION        reduce using rule 14 (statement -> function_call_stmt .)
    ARRAY_TYPE      reduce using rule 14 (statement -> function_call_stmt .)
    POINTER_TYPE    reduce using rule 14 (statement -> function_call_stmt .)
    AMPERSAND       reduce using rule 14 (statement -> function_call_stmt .)
    TOP             reduce using rule 14 (statement -> function_call_stmt .)
    BOTTOM          reduce using rule 14 (statement -> function_call_stmt .)
    LEFT            reduce using rule 14 (statement -> function_call_stmt .)
    RIGHT           reduce using rule 14 (statement -> function_call_stmt .)
    TIMESHIFT       reduce using rule 14 (statement -> function_call_stmt .)
    $end            reduce using rule 14 (statement -> function_call_stmt .)
    RBRACE          reduce using rule 14 (statement -> function_call_stmt .)


state 15

    (15) assignment -> IDENTIFIER . ASSIGN expr SEMI
    (16) assignment -> IDENTIFIER . LSQUARE expr RSQUARE ASSIGN expr SEMI
    (17) assignment -> IDENTIFIER . ASSIGN function_call SEMI
    (36) function_call -> IDENTIFIER . LPAREN function_args_list RPAREN
    (37) function_call -> IDENTIFIER . LPAREN RPAREN

    ASSIGN          shift and go to state 32
    LSQUARE         shift and go to state 33
    LPAREN          shift and go to state 34


state 16

    (38) function_call_stmt -> function_call . SEMI

    SEMI            shift and go to state 35


state 17

    (18) print_statement -> PRINT . LPAREN expr RPAREN SEMI

    LPAREN          shift and go to state 36


state 18

    (19) if_statement -> IF . LPAREN expr RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (20) if_statement -> IF . LPAREN expr RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 37


state 19

    (21) while_statement -> WHILE . LPAREN expr RPAREN LBRACE statement_list RBRACE
    (22) while_statement -> WHILE . LPAREN expr RPAREN LBRACE statement_list RBRACE INSTEAD LBRACE statement_list RBRACE

    LPAREN          shift and go to state 38


state 20
